# brave-core

./: DEPS  Jenkinsfile  package-lock.json  package.json
android/: brave_java_sources.gni
android/java/: AndroidManifest.xml
app/: brave_generated_resources.grd
browser/: about_flags.cc  brave_content_browser_client.cc  sources.gni
browser/brave_ads/: ads_service_impl.cc  ads_service_impl.h
browser/brave_shields/: ad_block_service_browsertest.cc  ad_block_service_browsertest.h
browser/brave_wallet/: brave_wallet_provider_impl_unittest.cc
browser/ephemeral_storage/: ephemeral_storage_service_factory.cc  ephemeral_storage_service_factory.h
browser/net/: brave_ad_block_tp_network_delegate_helper.cc  brave_ad_block_tp_network_delegate_helper.h  brave_ad_block_tp_network_delegate_helper_unittest.cc  brave_request_handler.cc  url_context.h
browser/tor/: BUILD.gn
browser/ui/: BUILD.gn  brave_browser_command_controller.cc
components/brave_vpn/: BUILD.gn  brave_vpn_os_connection_api.h  brave_vpn_os_connection_api_mac.mm  brave_vpn_os_connection_api_win.cc  brave_vpn_service.cc  brave_vpn_service.h  brave_vpn_service_desktop.cc  brave_vpn_service_desktop.h  brave_vpn_service_state_machine.cc  brave_vpn_service_state_machine.h  brave_vpn_unittest.cc  switches.h  utils_win.cc
components/ephemeral_storage/: BUILD.gn  ephemeral_storage_service.cc  ephemeral_storage_service.h
components/resources/: BUILD.gn  wallet_strings.grdp
components/trezor_bridge/: BUILD.gn  trezor_bridge.html  trezor_bridge.tsx  (+1 more)
patches/: chrome-VERSION.patch
test/: BUILD.gn
(+71 files in other folders)
