# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

static_library("ephemeral_storage") {
  sources = [
    "ephemeral_storage_service.cc",
    "ephemeral_storage_service.h",
  ]

  deps = [
    "//base",
    "//components/keyed_service/core",
    "//components/prefs",
    "//components/security_interstitials/content:security_interstitial_page",
    "//components/security_interstitials/core",
    "//components/user_prefs",
    "//content/public/browser",
    "//net",
    "//ui/base",
    "//url",
  ]
}
